<resources>
    <string name="app_name">Tetris_demo</string>
    <string name="game_name">TETRIS</string>
    <string name="high_score_default">High score: </string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">exit</string>
    <string name="high_score">High score</string>
    <string name="current_score">Current score</string>
    <string name="btn_restart">Restart</string>
    <string name="succes_reset">Score successfully reset</string>
    <string name="btn_left">⇦</string>
    <string name="btn_down">⇩</string>
    <string name="btn_right">⇨</string>
    <string name="btn_rotate">↻</string>
</resources>