<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e8e8e8"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="32dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_score"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_current_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_top"
                    android:text="@string/high_score"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_restart" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9">

            <ru.tetris.demo.view.TetrisView
                android:id="@+id/view_tetris"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/view_tetris"
                    android:orientation="horizontal"
                    tools:ignore="NotSibling">

                    <Button
                        android:id="@+id/btn_left"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/btn_left"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_down"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:layout_gravity="bottom"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/btn_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_right"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:layout_gravity="bottom"
                        style="?android:attr/buttonBarButtonStyle" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_rotate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_rotate"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:gravity="center"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@id/view_tetris"
                    android:layout_marginBottom="90dp"
                    tools:ignore="NotSibling" />

            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>